Added Sponsors and General Cleanup

--- a/car.html
+++ b/car.html
@@ -115,6 +115,24 @@
                 <img alt="Proformance" class="colorimage" src="public/sponsors/ProfromanceColor.png" />
               </a>
             </div>
+                        <div class="sponsor-logo">
+              <img alt="HLP (black and white)" class="bw" src="public/sponsors/HLPbw.png" />
+              <a aria-label="HLP" href="https://proformancemetals.co.uk/" target="_blank" rel="noopener">
+                <img alt="HLP" class="colorimage" src="public/sponsors/HLP.png" />
+              </a>
+            </div>
+                        <div class="sponsor-logo">
+              <img alt="Entryphone (black and white)" class="bw" src="public/sponsors/Entryphone_Logo_BW_RGB.png" />
+              <a aria-label="Entryphone" href="https://proformancemetals.co.uk/" target="_blank" rel="noopener">
+                <img alt="Entryphone" class="colorimage" src="public/sponsors/Entryphone_Logo_White_RGB.png" />
+              </a>
+            </div>
+                        <div class="sponsor-logo">
+              <img alt="Gamma Technologies (black and white)" class="bw" src="public\sponsors\GAMMA TECHNOLOGIES LOGO 2021-1bw.png" />
+              <a aria-label="Gamma Technologies" href="https://proformancemetals.co.uk/" target="_blank" rel="noopener">
+                <img alt="Gamma Technologies" class="colorimage" src="public/sponsors/GAMMA TECHNOLOGIES LOGO 2021-1.webp" />
+              </a>
+            </div>
           </div>
         </div>
       </section>
