--- a/team.html
+++ b/team.html
@@ -479,7 +479,7 @@
         </div>
       </section>
             <!-- ✅ Our Partners (centered + responsive) -->
-      <section class="section-2 partners-section">
+<section class="section-2 partners-section">
         <div class="container">
           <div class="title">
             <h2>Our Partners</h2>
@@ -532,6 +532,24 @@
               <img alt="Proformance (black and white)" class="bw" src="public/sponsors/ProformanceBW.png" />
               <a aria-label="Proformance" href="https://proformancemetals.co.uk/" target="_blank" rel="noopener">
                 <img alt="Proformance" class="colorimage" src="public/sponsors/ProfromanceColor.png" />
+              </a>
+            </div>
+                        <div class="sponsor-logo">
+              <img alt="HLP (black and white)" class="bw" src="public/sponsors/HLPbw.png" />
+              <a aria-label="HLP" href="https://proformancemetals.co.uk/" target="_blank" rel="noopener">
+                <img alt="HLP" class="colorimage" src="public/sponsors/HLP.png" />
+              </a>
+            </div>
+                        <div class="sponsor-logo">
+              <img alt="Entryphone (black and white)" class="bw" src="public/sponsors/Entryphone_Logo_BW_RGB.png" />
+              <a aria-label="Entryphone" href="https://proformancemetals.co.uk/" target="_blank" rel="noopener">
+                <img alt="Entryphone" class="colorimage" src="public/sponsors/Entryphone_Logo_White_RGB.png" />
+              </a>
+            </div>
+                        <div class="sponsor-logo">
+              <img alt="Gamma Technologies (black and white)" class="bw" src="public\sponsors\GAMMA TECHNOLOGIES LOGO 2021-1bw.png" />
+              <a aria-label="Gamma Technologies" href="https://proformancemetals.co.uk/" target="_blank" rel="noopener">
+                <img alt="Gamma Technologies" class="colorimage" src="public/sponsors/GAMMA TECHNOLOGIES LOGO 2021-1.webp" />
               </a>
             </div>
           </div>
