--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,7 @@
       <div class="container">
         <div class="header-wrapper">
           <div class="logo">
-            <a href="/index.html" aria-label="Home">
+            <a href="//" aria-label="Home">
               <svg
                 viewBox="0 0 257 143"
                 xmlns="http://www.w3.org/2000/svg"
@@ -211,7 +211,7 @@
       <div class="footer-column">
         <h3>Links</h3>
         <p>
-          <a href="index.html">Home</a><br />
+          <a href="/">Home</a><br />
           <a href="car.html">The Car</a><br />
           <a href="history.html">History</a><br />
           <a href="team.html">Team</a><br />
