--- a/history.html
+++ b/history.html
@@ -21,7 +21,7 @@
       <div class="container">
         <div class="header-wrapper">
           <div class="logo">
-            <a href="/index.html" aria-label="Home">
+            <a href="//" aria-label="Home">
               <svg viewBox="0 0 257 143" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Swansea University">
                 <image href="public/logo.png" width="257" height="143" preserveAspectRatio="xMidYMid meet" />
               </svg>
@@ -167,7 +167,7 @@
       <div class="footer-column">
         <h3>Links</h3>
         <p>
-          <a href="index.html">Home</a><br />
+          <a href="/">Home</a><br />
           <a href="car.html">The Car</a><br />
           <a href="history.html">History</a><br />
           <a href="team.html">Team</a><br />
