Fixed Routing Error

--- a/history.html
+++ b/history.html
@@ -21,7 +21,7 @@
       <div class="container">
         <div class="header-wrapper">
           <div class="logo">
-            <a href="//" aria-label="Home">
+            <a href="/" aria-label="Home">
               <svg viewBox="0 0 257 143" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Swansea University">
                 <image href="public/logo.png" width="257" height="143" preserveAspectRatio="xMidYMid meet" />
               </svg>
