--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,7 @@
       <div class="container">
         <div class="header-wrapper">
           <div class="logo">
-            <a href="//" aria-label="Home">
+            <a href="/" aria-label="Home">
               <svg
                 viewBox="0 0 257 143"
                 xmlns="http://www.w3.org/2000/svg"
