--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,9 @@
 
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/x-icon" href="public/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/public/SwanseaLogoCar48.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="public/SwanseaLogoCar96.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="public/SwanseaLogoCar.png">
     <link
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
       rel="stylesheet"
