Swapped Instagram Links to Photos

--- a/gallery.html
+++ b/gallery.html
@@ -65,56 +65,52 @@
     <div class="gallery-grid" id="galleryGrid">
       <!-- Visible (first 6) -->
       <a class="gallery-item" href="https://www.instagram.com/p/DMhi65CtIMl/" target="_blank" rel="noopener">
-        <img src="https://scontent-man2-1.cdninstagram.com/v/t51.82787-15/523170197_17887007931320850_8697827598143901088_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=111&ig_cache_key=MzY4NDM3OTU1MDcyNTQ3MzA2MQ%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTgwMC5zZHIuQzMifQ%3D%3D&_nc_ohc=RGvGq7UTL6MQ7kNvwEbF4FX&_nc_oc=AdlOTZIVV_yo66da0NE_twJyzpL997k1RHjGi2ygQTCzHvxV7qwZnrcptG-yiMQV90Q&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-man2-1.cdninstagram.com&_nc_gid=dXOepYm2UlMz0ziPmgnXXA&oh=00_AfrOV5l8uRSlu7sCM9uHvbip9kWKDZTXQn3L3QDSykj_4g&oe=697C32BE" alt="Instagram post 1" loading="lazy" />
+        <img src="public\instagram\1.jpg" alt="Instagram post 1" loading="lazy" />
       </a>
 
       <a class="gallery-item" href="https://www.instagram.com/p/DMhi085tJX4/" target="_blank" rel="noopener">
-        <img src="https://scontent-man2-1.cdninstagram.com/v/t51.82787-15/522659813_17887007898320850_8288291141623004697_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=106&ig_cache_key=MzY4NDM3OTE0MjU1MjU4OTgxNg%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTgwMC5zZHIuQzMifQ%3D%3D&_nc_ohc=3sxGnsxrwUkQ7kNvwE3yzM3&_nc_oc=AdkLLviR6c7ljlwYxz-5ydGTomDRdZGjkhFSQSI1fFhKFVcQU0cw4j4lf9nqWQ403tc&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-man2-1.cdninstagram.com&_nc_gid=dXOepYm2UlMz0ziPmgnXXA&oh=00_AfpWoRAzPwvSC6E4e1waxXBCIpd4sMZam64_YljXs1SMow&oe=697C489E" alt="Instagram post 2" loading="lazy" />
+        <img src="public\instagram\2.jpg" alt="Instagram post 2" loading="lazy" />
       </a>
 
       <a class="gallery-item" href="https://www.instagram.com/p/DMhi0zitk2F/" target="_blank" rel="noopener">
-        <img src="https://scontent-man2-1.cdninstagram.com/v/t51.82787-15/522706099_17887007889320850_3300962044397885808_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=100&ig_cache_key=MzY4NDM3OTEzMjUwMzE0OTk1Nw%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTgwMC5zZHIuQzMifQ%3D%3D&_nc_ohc=QBDwZ1m6n9sQ7kNvwFEeW6J&_nc_oc=AdmQaHHhegVUKqeGilZVrnDnIAY0tr2fvMtgiLO8lyW7gBwbf71-vdXGLQ8TOMXvN4g&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-man2-1.cdninstagram.com&_nc_gid=dXOepYm2UlMz0ziPmgnXXA&oh=00_Afpu2-FU7gnxJw2QotnFvtBI-XVKd_Co6VaSPVkjspcGGw&oe=697C50E5" alt="Instagram post 3" loading="lazy" />
+        <img src="public\instagram\3.jpg" alt="Instagram post 3" loading="lazy" />
       </a>
 
       <a class="gallery-item" href="https://www.instagram.com/p/DRhYK0mDEfH/?img_index=1" target="_blank" rel="noopener">
-        <img src="https://scontent-man2-1.cdninstagram.com/v/t51.82787-15/588193933_17901428904320850_7985667512678281568_n.jpg?stp=dst-jpegr_e35_tt6&_nc_cat=104&ig_cache_key=Mzc3NDQwNDI0MjU2MDUzNTgwNA%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTkyMC5oZHIuQzMifQ%3D%3D&_nc_ohc=mMTgXn6dt7EQ7kNvwH7J8i6&_nc_oc=AdkK4FPWz3pLolPJ_LPW4Evk4cyJ0mcoZq7eEtgmghnC2O6TRXGnx4_lqbxiq2SVjCU&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&se=-1&_nc_ht=scontent-man2-1.cdninstagram.com&_nc_gid=dXOepYm2UlMz0ziPmgnXXA&oh=00_AfrZUjwt7A14sl82DsDHqvt5K1tpq9w0iKQ7eQ3Dd_IW0A&oe=697C40E2" alt="Instagram post 4" loading="lazy" />
+        <img src="public\instagram\4.jpg" alt="Instagram post 4" loading="lazy" />
       </a>
 
       <a class="gallery-item" href="https://www.instagram.com/p/DRhYK0mDEfH/?img_index=7" target="_blank" rel="noopener">
-        <img src="https://scontent-man2-1.cdninstagram.com/v/t51.82787-15/589086081_17901428955320850_3360417417519164463_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=109&ig_cache_key=Mzc3NDQwNDI0MjU2ODk1MTUxMA%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTkyMC5zZHIuQzMifQ%3D%3D&_nc_ohc=9zsCHBCEVcIQ7kNvwGrSUz7&_nc_oc=AdnE5YkNTVf-8O15MiDVqpPm9KMBCKOqNUVZc2xwO1ZSfL7n33k83nsmrzi0htSiRAg&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-man2-1.cdninstagram.com&_nc_gid=dXOepYm2UlMz0ziPmgnXXA&oh=00_AfoiqjVaigUXpHyDLYvLVvAsi5SYkf0ifLZ-4GPiEGYO0A&oe=697C6997" alt="Instagram post 5" loading="lazy" />
+        <img src="public\instagram\5.jpg" alt="Instagram post 5" loading="lazy" />
       </a>
 
       <a class="gallery-item" href="https://www.instagram.com/p/DRhYK0mDEfH/?img_index=9" target="_blank" rel="noopener">
-        <img src="https://scontent-man2-1.cdninstagram.com/v/t51.82787-15/588464715_17901429003320850_8260381699416922495_n.jpg?stp=dst-jpegr_e35_tt6&_nc_cat=101&ig_cache_key=Mzc3NDQwNDI0MjU2ODk2Njk2NQ%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTkyMC5oZHIuQzMifQ%3D%3D&_nc_ohc=Lo7Y4_1gHtEQ7kNvwH5tWVB&_nc_oc=AdkagPers79LxbkIVBs9Vkm1L8vel_uwMZ5bxT0V7aYngZxhBIimlUdgu9mcHXYzsX8&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&se=-1&_nc_ht=scontent-man2-1.cdninstagram.com&_nc_gid=dXOepYm2UlMz0ziPmgnXXA&oh=00_AfqgIcjgyQ_JCeCy28rwsVXn4JWBVgNFTKy6fW5vKQ-PJg&oe=697C3D6B" alt="Instagram post 6" loading="lazy" />
+        <img src="public\instagram\6.jpg" alt="Instagram post 6" loading="lazy" />
       </a>
 
       <!-- Hidden initially (loads more) -->
       <a class="gallery-item " href="https://www.instagram.com/p/DRhYK0mDEfH/?img_index=15" target="_blank" rel="noopener">
-        <img src="https://scontent-man2-1.cdninstagram.com/v/t51.82787-15/587492226_17901429039320850_4147501181279799479_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=101&ig_cache_key=Mzc3NDQwNDI0MjU4NTcxMzI5MA%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTkyMC5zZHIuQzMifQ%3D%3D&_nc_ohc=gz2eLjLXFlEQ7kNvwGMEqSO&_nc_oc=AdkmPBldOVHQwjyw4bpPZVNoLHS4Y5XowKeq89-LZqlM4fL_-Sf3QVvIpKTRM_ayD28&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-man2-1.cdninstagram.com&_nc_gid=dXOepYm2UlMz0ziPmgnXXA&oh=00_Afq8n9OlkXvMNwoeQUObktYmHHbwkFbA7JQD03xHFJsPdg&oe=697C661F" alt="Instagram post 7" loading="lazy" />
-      </a>
-
-      <a class="gallery-item " href="https://www.instagram.com/p/DRIGvJDCAc9/?img_index=1" target="_blank" rel="noopener">
-        <img src="https://scontent-man2-1.cdninstagram.com/v/t51.82787-15/582648378_18328761976211114_3996747033527133368_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=108&ig_cache_key=Mzc2NzI5MDY5MTY3NjgzNTI2Mg%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTkxMS5zZHIuQzMifQ%3D%3D&_nc_ohc=cP5EDEM8EvAQ7kNvwGlcj0D&_nc_oc=AdmhBWxjjyWJoEx9dojcQOQh1-hxe-7qMkVFZBqoI9gOVI8F9ffQF9RF2mVp4FxLXqg&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-man2-1.cdninstagram.com&_nc_gid=dXOepYm2UlMz0ziPmgnXXA&oh=00_Afr0aD6YNBPaz8WrzA6DAkwiFoCJ25PShmz759Dhx7qeig&oe=697C5B85" alt="Instagram post 8" loading="lazy" />
+        <img src="public\instagram\7.jpg" alt="Instagram post 7" loading="lazy" />
       </a>
 
       <a class="gallery-item" href="https://www.instagram.com/p/DPjV1RRDEWB/?img_index=1" target="_blank" rel="noopener">
-        <img src="https://scontent-man2-1.cdninstagram.com/v/t51.82787-15/560929457_17896072971320850_7324863629655297769_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=111&ig_cache_key=MzczODkyODEyNjk5OTk0MzE5Nw%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTA4MC5zZHIuQzMifQ%3D%3D&_nc_ohc=n_j9SddgVf8Q7kNvwGJhRdC&_nc_oc=AdmbBSyjVVCjCOrM6fRn0j5PWtsZDCUXXO3LyDKpW7ajqLX0kBoI9KSfUKTlaAsN2Qg&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-man2-1.cdninstagram.com&_nc_gid=-bYjc3oA-_SKrxsEGzKZOg&oh=00_AfoHeKC0ok5-JxzlgeCXUZQRwgBGTbK_ClX7nOjtSpi-rA&oe=697C69C4" alt="Instagram post 9" loading="lazy" />
+        <img src="public\instagram\8.jpg" alt="Instagram post 9" loading="lazy" />
       </a>
 
-      <a class="gallery-item is-hidden" href="https://www.instagram.com/p/DOagwiIjU-Z/" target="_blank" rel="noopener">
-        <img src="https://scontent-man2-1.cdninstagram.com/v/t51.82787-15/543781079_17892725775320850_5496191490021960589_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=109&ig_cache_key=MzcxODQyODUxNTAyMTcwNTExMw%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTA4MC5zZHIuQzMifQ%3D%3D&_nc_ohc=g8Q2rFymHPkQ7kNvwEEEXAg&_nc_oc=AdlMwKsQy-FW6mzDSBAr-ioMDeab7sYO2FdP5nGeC4T0qObsG0K4XfIEOSN9wbVZ8F4&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-man2-1.cdninstagram.com&_nc_gid=rWKihwmHpIaxckquIsGc_A&oh=00_Afqy9e2IeE1vR8zuTcsn0VYXANbECzevqlfyiQANClK_Cw&oe=697C6935" alt="Instagram post 10" loading="lazy" />
+      <a class="gallery-item" href="https://www.instagram.com/p/DOagwiIjU-Z/" target="_blank" rel="noopener">
+        <img src="public\instagram\9.jpg" alt="Instagram post 10" loading="lazy" />
       </a>
 
       <a class="gallery-item is-hidden" href="https://www.instagram.com/p/DMfluQ6NJnw/?img_index=1" target="_blank" rel="noopener">
-        <img src="https://scontent-man2-1.cdninstagram.com/v/t51.82787-15/522696217_17886920808320850_5670990646171367859_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=110&ig_cache_key=MzY4MzgyODkxOTI0MTY2NTg2NA%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTkyMC5zZHIuQzMifQ%3D%3D&_nc_ohc=8DNTjDlMDs0Q7kNvwELqmy_&_nc_oc=Adk6SaoFqq1Eqly2Pe7soBs9ERo1Nk94X3VGOWIsdpeCO63Qtq2QgQVGcZcYt-Sgflc&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-man2-1.cdninstagram.com&_nc_gid=rWKihwmHpIaxckquIsGc_A&oh=00_Afrx6LA6amqy_Hf6CwRlputFChmb0nw-tXHuO-a9_FUJcg&oe=697C3A24" alt="Instagram post 11" loading="lazy" />
+        <img src="public\instagram\10.jpg" alt="Instagram post 11" loading="lazy" />
       </a>
 
       <a class="gallery-item is-hidden" href="https://www.instagram.com/p/DMc1SQitVyj/?img_index=1" target="_blank" rel="noopener">
-        <img src="https://scontent-man2-1.cdninstagram.com/v/t51.82787-15/522215284_17886785088320850_1199406487073746667_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=103&ig_cache_key=MzY4MzA1MjkzNjg1NTI4MzU1MA%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTgwMC5zZHIuQzMifQ%3D%3D&_nc_ohc=WjmtQ2vpGQoQ7kNvwGYi3sd&_nc_oc=AdnKOmNU0EYBK9fFUYWeTCfBIGuw2eSlFItakDBvWriqYG66s-LzAowPvWSg3Ro1Ako&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-man2-1.cdninstagram.com&_nc_gid=rWKihwmHpIaxckquIsGc_A&oh=00_AfpzjygWyBLqLakwIIHmLN_mNMEQoCwD7WIvpuAW-TpMmg&oe=697C5C46" alt="Instagram post 12" loading="lazy" />
+        <img src="public\instagram\11.jpg" alt="Instagram post 12" loading="lazy" />
       </a>
 
       <a class="gallery-item is-hidden" href="https://www.instagram.com/p/DMfluQ6NJnw/?img_index=4" target="_blank" rel="noopener">
-        <img src="https://scontent-man2-1.cdninstagram.com/v/t51.82787-15/523166095_17886920835320850_5767934124663025858_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=110&ig_cache_key=MzY4MzgyODkxOTI0MTY5MjY1MQ%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjEwNjh4MTQyNC5zZHIuQzMifQ%3D%3D&_nc_ohc=SsM0ru5p0a0Q7kNvwEtw0M6&_nc_oc=AdnaU65BH54dZuh_KCWrHi_KCde-_TTwBaiQb6IHJfm-zef1UDQyZRqlMnIzQuNBM94&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-man2-1.cdninstagram.com&_nc_gid=rWKihwmHpIaxckquIsGc_A&oh=00_AfrgP6R2jKytOHzYKkJE9BKA8wP5R0yp46Jn1aTGKdHmrA&oe=697C5D0A" alt="Instagram post 12" loading="lazy" />
+        <img src="public\instagram\12.jpg" alt="Instagram post 12" loading="lazy" />
       </a>
     </div>
 
