Adding Newsletter Pages

--- a/sponsors.html
+++ b/sponsors.html
@@ -46,6 +46,7 @@
               <li class="nav-item"><a href="/team.html" class="nav-link">Team</a></li>
               <li class="nav-item"><a href="/sponsors.html" class="nav-link">Sponsors</a></li>
               <li class="nav-item"><a href="/gallery.html" class="nav-link">Gallery</a></li>
+              <li class="nav-item"><a href="/news.html" class="nav-link">News</a></li>
               <li class="nav-item"><a href="/join-us.html" class="nav-link">Join Us</a></li>
             </ul>
           </nav>
@@ -240,6 +241,8 @@
           <a href="team.html">Team</a><br />
           <a href="sponsors.html">Sponsors</a><br />
           <a href="gallery.html">Gallery</a><br />
+          <a href="news.html">News</a><br />
+          <a href="join-us.html">Join Us</a><br />
           <a href="https://www.swansea.ac.uk/">The University</a>
         </p>
       </div>
