--- a/TEMPLATE.html
+++ b/TEMPLATE.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Swansea Formula Student</title>
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="public/favicon.ico" />
     <link rel="icon" type="image/png" sizes="48x48" href="/public/SwanseaLogoCar48.png">
     <link rel="icon" type="image/png" sizes="96x96" href="public/SwanseaLogoCar96.png">
